fix spacing of labels in doctor schedule page

--- a/client/src/Pages/DoctorDashboard/Schedule/DoctorSchedule.module.css
+++ b/client/src/Pages/DoctorDashboard/Schedule/DoctorSchedule.module.css
@@ -68,7 +68,7 @@
 .patientContainer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   gap: 10px;
+   gap: 8px;
    margin-left: 20px;
    margin-top: 50px;
    max-height: 100vh;
@@ -290,18 +290,13 @@
    .appointmentContainer {
       margin-top: 6px;
    }
-   .DSFiles {
-      margin: 0;
-      width: 100%;
-      height: 313px;
-   }
-   .DSFiles table {
+   /* .DSFiles table {
       font-size: 0.9375rem;
       margin-top: 0;
    }
    .DSFiles td {
       font-size: 0.9375rem;
-   }
+   } */
    .appointmentContainer .nameSection {
       width: 250px;
       padding: 0;
